--- a/nodeBlogWeb/package.json
+++ b/nodeBlogWeb/package.json
@@ -10,12 +10,16 @@
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.18.3",
     "axios": "^0.24.0",
+    "braft-editor": "^2.3.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
+    "less": "^4.1.2",
+    "less-loader": "^10.2.0",
     "vite": "^2.7.2"
   }
 }
