--- a/nodeBlog/package.json
+++ b/nodeBlog/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node bin/www",
-    "dev": "cross-env NODE_ENV=dev ./node_modules/.bin/nodemon bin/www",
-    "prd": "cross-env NODE_ENV=production pm2 start bin/www",
+    "start": "node bin/www.js",
+    "dev": "cross-env NODE_ENV=dev ./node_modules/.bin/nodemon bin/www.js",
+    "prd": "cross-env NODE_ENV=production pm2 start bin/www.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -22,6 +22,7 @@
     "koa-static": "^5.0.0",
     "koa-views": "^6.2.0",
     "koa2-cors": "^2.0.6",
+    "mongodb": "^4.5.0",
     "pug": "^2.0.3"
   },
   "devDependencies": {
