--- a/nodeBlogWeb/package.json
+++ b/nodeBlogWeb/package.json
@@ -10,9 +10,10 @@
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.18.3",
     "axios": "^0.24.0",
-    "braft-editor": "^2.3.9",
+    "markdown-it": "^12.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-markdown-editor-lite": "^1.3.2",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1"
   },
