--- a/nodeBlogWeb/package.json
+++ b/nodeBlogWeb/package.json
@@ -11,6 +11,7 @@
     "antd": "^4.18.3",
     "axios": "^0.24.0",
     "markdown-it": "^12.3.2",
+    "moment": "^2.29.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-markdown-editor-lite": "^1.3.2",
