--- a/YangBlogWeb/package.json
+++ b/YangBlogWeb/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.26.1",
-    "element-plus": "^1.3.0-beta.10",
+    "element-plus": "^2.2.9",
     "vue": "^3.2.31",
     "vue-router": "^4.0.12"
   },
