--- a/YangWebBlog/package.json
+++ b/YangWebBlog/package.json
@@ -12,6 +12,7 @@
     "@element-plus/icons-vue": "^2.0.6",
     "axios": "^0.27.2",
     "element-plus": "^2.2.9",
+    "moment": "^2.29.4",
     "vue": "^3.2.37",
     "vue-router": "^4.1.2"
   },
