--- a/nodeBlog/package.json
+++ b/nodeBlog/package.json
@@ -23,7 +23,10 @@
     "koa-views": "^6.2.0",
     "koa2-cors": "^2.0.6",
     "mongodb": "^4.5.0",
-    "pug": "^2.0.3"
+    "mongoose": "^6.4.7",
+    "pug": "^2.0.3",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
