--- a/YangWebBlog/package.json
+++ b/YangWebBlog/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.27.2",
     "element-plus": "^2.2.9",
     "moment": "^2.29.4",
+    "prettier": "^2.7.1",
     "vue": "^3.2.37",
     "vue-router": "^4.1.2"
   },
