--- a/nodeBlog/package.json
+++ b/nodeBlog/package.json
@@ -24,6 +24,7 @@
     "koa2-cors": "^2.0.6",
     "mongodb": "^4.5.0",
     "mongoose": "^6.4.7",
+    "prettier": "^2.7.1",
     "pug": "^2.0.3",
     "request": "^2.88.2",
     "request-promise": "^4.2.6"
