--- a/YangWebBlog/.prettierrc.json
+++ b/YangWebBlog/.prettierrc.json
@@ -8,8 +8,8 @@
   "jsxSingleQuote": true,
   "trailingComma": "all",
   "bracketSpacing": true,
-  "jsxBracketSameLine": true,
-  "arrowParens": "always",
+  "jsxBracketSameLine": false,
+  "arrowParens": "avoid",
   "requirePragma": false,
   "insertPragma": false,
   "proseWrap": "preserve",
