--- a/nodeBlogWeb/package.json
+++ b/nodeBlogWeb/package.json
@@ -8,20 +8,19 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
-    "antd": "^4.18.3",
-    "axios": "^0.24.0",
-    "markdown-it": "^12.3.2",
-    "moment": "^2.29.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-markdown-editor-lite": "^1.3.2",
-    "react-router": "^6.2.1",
-    "react-router-dom": "^6.2.1"
+    "antd": "^4.22.4",
+    "axios": "^0.27.2",
+    "esbuild-windows-64": "^0.14.54",
+    "markdown-it": "^13.0.1",
+    "moment": "^2.29.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-markdown-editor-lite": "^1.3.3",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^1.0.7",
-    "less": "^4.1.2",
-    "less-loader": "^10.2.0",
-    "vite": "^2.7.2"
+    "@vitejs/plugin-react": "^2.0.0",
+    "vite": "^3.0.4"
   }
 }
