--- a/YangWebBlog/package.json
+++ b/YangWebBlog/package.json
@@ -19,7 +19,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.0",
+    "node-sass": "^7.0.1",
     "sass": "^1.53.0",
+    "sass-loader": "^13.0.2",
     "vite": "^3.0.0"
   }
 }
