--- a/nodeBlogWeb/package.json
+++ b/nodeBlogWeb/package.json
@@ -13,14 +13,16 @@
     "esbuild-windows-64": "^0.14.54",
     "markdown-it": "^13.0.1",
     "moment": "^2.29.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-markdown-editor-lite": "^1.3.3",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^2.0.0",
+    "sass": "^1.54.4",
+    "sass-loader": "^13.0.2",
     "vite": "^3.0.4"
   }
 }
