--- a/YangWebBlog/package.json
+++ b/YangWebBlog/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "vite --mode dev",
+    "prod": "vite --mode prod",
     "preview": "vite preview"
   },
   "dependencies": {
