--- a/YangWebBlog/package.json
+++ b/YangWebBlog/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite --mode dev",
     "prod": "vite --mode prod",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
