--- a/backstageBlog/package.json
+++ b/backstageBlog/package.json
@@ -12,9 +12,11 @@
     "@wangeditor/editor": "^5.1.18",
     "@wangeditor/editor-for-react": "^1.0.5",
     "antd": "^4.23.2",
+    "bizcharts": "^4.1.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.1"
+    "react-router-dom": "^6.4.1",
+    "sass": "^1.55.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
