--- a/nodeBlogWeb/package.json
+++ b/nodeBlogWeb/package.json
@@ -12,6 +12,7 @@
     "@wangeditor/editor-for-react": "^1.0.5",
     "antd": "^4.22.4",
     "axios": "^0.27.2",
+    "bizcharts": "^4.1.20",
     "echarts": "^5.3.3",
     "esbuild-windows-64": "^0.14.54",
     "markdown-it": "^13.0.1",
