--- a/backstageBlog/package.json
+++ b/backstageBlog/package.json
@@ -12,6 +12,7 @@
     "@wangeditor/editor": "^5.1.18",
     "@wangeditor/editor-for-react": "^1.0.5",
     "antd": "^4.23.2",
+    "axios": "^1.0.0",
     "bizcharts": "^4.1.20",
     "echarts": "^5.4.0",
     "react": "^18.2.0",
