--- a/backstageBlog/package.json
+++ b/backstageBlog/package.json
@@ -17,6 +17,7 @@
     "bizcharts": "^4.1.20",
     "echarts": "^5.4.0",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1",
     "sass": "^1.55.0"
