--- a/backstageBlog/package.json
+++ b/backstageBlog/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.6",
     "@wangeditor/editor": "^5.1.18",
     "@wangeditor/editor-for-react": "^1.0.5",
     "antd": "^4.23.2",
@@ -19,6 +20,7 @@
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.1",
     "sass": "^1.55.0"
   },
