--- a/backstageBlog/package.json
+++ b/backstageBlog/package.json
@@ -28,8 +28,15 @@
   "devDependencies": {
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@typescript-eslint/parser": "^5.45.0",
     "@vitejs/plugin-react": "^2.1.0",
-    "typescript": "^4.6.4",
+    "eslint": "^8.22.0",
+    "postcss-scss": "^4.0.6",
+    "stylelint": "^14.15.0",
+    "stylelint-config-recommended-scss": "^8.0.0",
+    "stylelint-config-standard": "^29.0.0",
+    "stylelint-scss": "^4.3.0",
+    "typescript": "^4.9.3",
     "vite": "^3.1.0"
   }
 }
