--- a/YangWebBlog/package.json
+++ b/YangWebBlog/package.json
@@ -15,14 +15,19 @@
     "element-plus": "^2.2.9",
     "moment": "^2.29.4",
     "prettier": "^2.7.1",
+    "three": "^0.148.0",
     "vue": "^3.2.37",
     "vue-router": "^4.1.2"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^3.0.0",
-    "node-sass": "^7.0.1",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "eslint": "^8.32.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-vue": "^9.9.0",
     "sass": "^1.53.0",
-    "sass-loader": "^13.0.2",
-    "vite": "^3.0.0"
+    "vite": "^4.0.4"
   }
 }
