--- a/backstageBlog/package.json
+++ b/backstageBlog/package.json
@@ -15,6 +15,7 @@
     "@wangeditor/editor-for-react": "^1.0.5",
     "antd": "^5.0.0",
     "axios": "^1.0.0",
+    "dayjs": "^1.11.7",
     "echarts": "^5.4.0",
     "qiniu-js": "^3.4.1",
     "react": "^18.2.0",
@@ -28,7 +29,7 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/parser": "^5.45.0",
-    "@vitejs/plugin-react": "^2.1.0",
+    "@vitejs/plugin-react": "^3.0.1",
     "eslint": "^8.22.0",
     "postcss-scss": "^4.0.6",
     "stylelint": "^14.15.0",
@@ -36,6 +37,6 @@
     "stylelint-config-standard": "^29.0.0",
     "stylelint-scss": "^4.3.0",
     "typescript": "^4.9.3",
-    "vite": "^3.1.0"
+    "vite": "^4.0.4"
   }
 }
