--- a/nodeBlog/package.json
+++ b/nodeBlog/package.json
@@ -32,6 +32,11 @@
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
+    "eslint": "^8.33.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-promise": "^6.1.1",
     "nodemon": "^2.0.19"
   }
 }
