--- a/backstageBlog/package.json
+++ b/backstageBlog/package.json
@@ -17,12 +17,13 @@
     "axios": "^1.0.0",
     "dayjs": "^1.11.7",
     "echarts": "^5.4.0",
+    "history": "^5.3.0",
     "qiniu-js": "^3.4.1",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
-    "react-router-dom": "^6.4.1",
+    "react-router-dom": "^6.8.1",
     "sass": "^1.55.0"
   },
   "devDependencies": {
