--- a/nodeBlog/package.json
+++ b/nodeBlog/package.json
@@ -24,6 +24,7 @@
     "koa2-cors": "^2.0.6",
     "mongodb": "^4.5.0",
     "mongoose": "^6.4.7",
+    "openai": "^3.1.0",
     "prettier": "^2.7.1",
     "pug": "^2.0.3",
     "qiniu": "^7.8.0",
